--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://618788ef-8f19-461a-a55a-fbe7e622291b-00-je8eguq9lsdm.spock.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://97285268-e81e-41c4-ba4b-b9e3e60c741d-00-2yxswuwjkkt4i.janeway.replit.dev/">
