--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://97285268-e81e-41c4-ba4b-b9e3e60c741d-00-2yxswuwjkkt4i.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://3d1799d4-5110-4281-8334-5752623b1ab6-00-7kkj3e6z3v77.riker.replit.dev/">
