--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://3d1799d4-5110-4281-8334-5752623b1ab6-00-7kkj3e6z3v77.riker.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=hhttps://9416b266-4717-4b77-a327-09704587b3cf-00-23ez55zpqtsw8.kirk.replit.dev/">
