--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=hhttps://9416b266-4717-4b77-a327-09704587b3cf-00-23ez55zpqtsw8.kirk.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://7276c8fa-99b0-46c4-8085-b69f6bed3f5e-00-vbp2r4q3yrlk.picard.replit.dev/">
