--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://7276c8fa-99b0-46c4-8085-b69f6bed3f5e-00-vbp2r4q3yrlk.picard.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://fec45d7a-6891-4019-8fb0-326e88444ce9-00-upnaff5y4hu9.worf.replit.dev//">
