--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://fec45d7a-6891-4019-8fb0-326e88444ce9-00-upnaff5y4hu9.worf.replit.dev//">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://3cc834d7-ae93-4e70-b936-483aa58fabff-00-c9zlv79p2efy.spock.replit.dev/">
