--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://3cc834d7-ae93-4e70-b936-483aa58fabff-00-c9zlv79p2efy.spock.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://397f0a5b-b210-4d5c-92b1-a639358a8bab-00-1ycvop5qzutyr.worf.replit.dev/">
