--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://397f0a5b-b210-4d5c-92b1-a639358a8bab-00-1ycvop5qzutyr.worf.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://9cff988f-8922-47d6-bdde-838d425cca8e-00-29cqm389er60i.janeway.replit.dev/">
