--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://9cff988f-8922-47d6-bdde-838d425cca8e-00-29cqm389er60i.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://2374751c-0a5d-46b7-b59d-439b1f707150-00-vyoheo7z7eyd.picard.replit.dev/">
