--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://2374751c-0a5d-46b7-b59d-439b1f707150-00-vyoheo7z7eyd.picard.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://cc46fdbd-31f9-409d-b459-7ca305714bbd-00-1cbj4vd2nh1rx.janeway.replit.dev/">
