--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://cc46fdbd-31f9-409d-b459-7ca305714bbd-00-1cbj4vd2nh1rx.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://6d7c825a-46bc-4e17-a76d-57022a8d2817-00-y24jq70pcn4u.riker.replit.dev/">
