--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://6d7c825a-46bc-4e17-a76d-57022a8d2817-00-y24jq70pcn4u.riker.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://eaebede7-5725-4fcf-ae00-49fe01c54e3c-00-33d87grmuq7jw.kirk.replit.dev/">
