--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://eaebede7-5725-4fcf-ae00-49fe01c54e3c-00-33d87grmuq7jw.kirk.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://86490583-8aa1-41c5-b200-19f03a646f60-00-2a1oo083ca48r.picard.replit.dev/">
