--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://86490583-8aa1-41c5-b200-19f03a646f60-00-2a1oo083ca48r.picard.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://92c94201-e923-4e28-a86b-72daeb938632-00-2mhdbbxakefm2.spock.replit.dev/">
