--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://92c94201-e923-4e28-a86b-72daeb938632-00-2mhdbbxakefm2.spock.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://b4b731fe-2a69-4bbe-82ff-a2ca67f53ea7-00-1u8nf7uo2krkc.worf.replit.dev/">
