--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://b4b731fe-2a69-4bbe-82ff-a2ca67f53ea7-00-1u8nf7uo2krkc.worf.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://443975cf-8632-496b-9385-180946f295e0-00-29oyoasfvckjq.janeway.replit.dev/">
