--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://443975cf-8632-496b-9385-180946f295e0-00-29oyoasfvckjq.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://f1b99f06-5fc6-4220-8e66-fef32100d975-00-12rfo2rh9bvwj.spock.replit.dev/">
