--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://9ac1a297-df29-418e-934a-37be11dc7f48-00-3e873p7aotpqd.spock.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://48e562eb-954b-4d4e-8a42-a79ace67c1be-00-18a9c5f88ooge.picard.replit.dev/">
