--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://48e562eb-954b-4d4e-8a42-a79ace67c1be-00-18a9c5f88ooge.picard.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://8485f8b5-ba25-427e-ad95-8796cad2e55b-00-2wmt78q6fpbms.kirk.replit.dev/">
