--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://8485f8b5-ba25-427e-ad95-8796cad2e55b-00-2wmt78q6fpbms.kirk.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://269a5a4f-28dc-4807-96d2-53c7481ce14e-00-jfo7xzvrj9g4.janeway.replit.dev/">
