--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://269a5a4f-28dc-4807-96d2-53c7481ce14e-00-jfo7xzvrj9g4.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://b0791c49-9a17-45dc-8e15-f1d44d625207-00-250uvrz2s9laq.riker.replit.dev/">
